tests/sumo/errors/invalid_color_name/errors.sumo
Error: Invalid color definition 'mauve'
Quitting (on error).
